--- a/HC/practice4/PW4_1/index.html
+++ b/HC/practice4/PW4_1/index.html
@@ -59,15 +59,22 @@
 				border-image-repeat: round;
 				box-sizing: padding-box;
 			}
-			div
+			.pushka
 			{
 				text-align: center;
+			}
+			.vse
+			{
+				width: 400px;
+				margin: 0 auto;
+				border: 1px solid white;
 			}
 		</style>
     </head>
 	<body>
+<div class="vse">
 	<h1>Стихи Пушкина</h1>
-	<div><img src="http://img1.liveinternet.ru/images/attach/d/1/129/938/129938577_5227673_114123771_psR7qnZiDYQ_1_.png"></div>
+	<div class="pushka"><img src="http://img1.liveinternet.ru/images/attach/d/1/129/938/129938577_5227673_114123771_psR7qnZiDYQ_1_.png"></div>
 	<ul>
 		<li>
 			<a href="./stih1/stih_1.html" target="_self" title="Перейти на 'Я помню чудное мгновенье'"><span>Я помню чудное мгновенье</span></a>
@@ -89,6 +96,7 @@
 			<a href="./stih1/stih2/stih3/stih4/stih5/stih_5.html" target="_self" title="Перейти на '2 ноября'"><span>2 ноября</span></a>
 		</li>
 	</ul>
+</div>
 	
 	</body>
 </HTML>
