--- a/HC/practice4/PW4_2/index.html
+++ b/HC/practice4/PW4_2/index.html
@@ -57,10 +57,23 @@
 			padding: 1%;
 			width: 100%;
 		}
+		img
+		{
+			border:20px solid gold; 
+			border-image-source: url(http://ozon-st.cdn.ngenix.net/multimedia/audio_cd_covers/1008862225.jpg); 
+			border-image-slice: 60; 
+			border-image-repeat: round;
+			box-sizing: padding-box;
+		}
+		div
+		{
+			text-align: center;
+		}
 		</style>
     </head>
 	<body>
 	<h1><a id="top"></a>Афанасий Афанасьевич Фет (Шеншин)</h1>
+	<div><img src="http://www.allsoch.ru/attachments/000/002/322/default.jpg" title="Фет" alt="Фет"></div>
 	<hr>
 	<ul>
 		<li><a href="#babochka">Бабочка</a></li>
@@ -282,9 +295,9 @@
 		<li>С задумчивой улыбкой на челе.</li>
 	</ul>
 	
-	<div class="footer">
+	<span class="footer">
 		<a href="#top">Наверх</a>
-	</div>
+	</span>
 	
 	</body>
 </HTML>
