--- a/HC/practice4/PW4_1/index.html
+++ b/HC/practice4/PW4_1/index.html
@@ -77,23 +77,23 @@
 	<div class="pushka"><img src="http://img1.liveinternet.ru/images/attach/d/1/129/938/129938577_5227673_114123771_psR7qnZiDYQ_1_.png"></div>
 	<ul>
 		<li>
-			<a href="./stih1/stih_1.html" target="_self" title="Перейти на 'Я помню чудное мгновенье'"><span>Я помню чудное мгновенье</span></a>
+			<a href="./stih1/stih_1.html" target="_self" title="Перейти на 'Я помню чудное мгновенье'">Я помню чудное мгновенье</a>
 		</li>
 		
 		<li>
-			<a href="./stih1/stih2/stih_2.html" target="_self" title="Перейти на 'Клеопатра'"><span>Клеопатра</span></a>
+			<a href="./stih1/stih2/stih_2.html" target="_self" title="Перейти на 'Клеопатра'">Клеопатра</a>
 		</li>
 		
 		<li>
-			<a href="./stih1/stih2/stih3/stih_3.html" target="_self" title="Перейти на 'Я памятник себе воздвиг нерукотворный'"><span>Я памятник себе воздвиг нерукотворный</span></a>
+			<a href="./stih1/stih2/stih3/stih_3.html" target="_self" title="Перейти на 'Я памятник себе воздвиг нерукотворный'">Я памятник себе воздвиг нерукотворный</a>
 		</li>
 		
 		<li>
-			<a href="./stih1/stih2/stih3/stih4/stih_4.html" target="_self" title="Перейти на '19 октября 1825'"><span>19 октября 1825</span></a>
+			<a href="./stih1/stih2/stih3/stih4/stih_4.html" target="_self" title="Перейти на '19 октября 1825'">19 октября 1825</a>
 		</li>
 		
 		<li>
-			<a href="./stih1/stih2/stih3/stih4/stih5/stih_5.html" target="_self" title="Перейти на '2 ноября'"><span>2 ноября</span></a>
+			<a href="./stih1/stih2/stih3/stih4/stih5/stih_5.html" target="_self" title="Перейти на '2 ноября'">2 ноября</a>
 		</li>
 	</ul>
 </div>
