В меню теперь все ок

--- a/HC/practice6/index.html
+++ b/HC/practice6/index.html
@@ -12,7 +12,7 @@
 						<div class="logo">
 							<img src="./img/Icon.png">
 						</div>
-						<span class="bold">Protectly</span>
+						<span class="default bold">Protectly</span>
 						<ul class="nav">
 							<li><a href="#">Product</a></li>
 							<li><a href="#">Industries</a></li>
@@ -25,7 +25,6 @@
 						</div>
 					</div>
 				</div>
-				
 				<div class="container container_protect">
 					<div class="protect_text">
 						Protect Your sensitive<br>
@@ -36,13 +35,13 @@
 							<a href="#">Try it out for free !</a>
 						</div>
 						<div class="watch_video">
-							<img src="./img/play.png">
-							<a href="#">Watch the Video</a>
+							<img class="play" src="./img/play.png">
+							<a href="#">Watch the Video</a><br>
 						</div>
 					</div>
 				</div>
-				<img class="noutbuk" src="./img/noutbuk.png">
 			</div>
+			<div class="container-oblaka"></div>
 		</div>
 	</body>
 </HTML>
