--- a/HC/practice6/index.html
+++ b/HC/practice6/index.html
@@ -20,7 +20,7 @@
 							<li><a href="#">Features</a></li>
 						</ul>
 						<div class="contacts">
-							<div>+1 (888) 675-4998</div>
+							<div class="default">+1 (888) 675-4998</div>
 							<img src="./img/сall.png">
 						</div>
 					</div>
@@ -42,6 +42,46 @@
 				</div>
 			</div>
 			<div class="container-oblaka"></div>
+			<div id="content">
+				<div class="container container_logos">
+					<img src="./img/first_logo.png">
+					<img src="./img/second_logo.png">
+					<img src="./img/third_logo.png">
+					<img src="./img/fourth_logo.png">
+					<img src="./img/fifth_logo.png">
+					<img src="./img/sixth_logo.png">
+				</div>
+				<!--<div class="lorem">Lorem ipsum sit Amet Dolor</div>-->
+				<div class="middle_text">
+					<div class="lorem">
+						Lorem ipsum sit Amet Dolor
+					</div>
+					<div class="text">
+						We’re all about making sure you have a great experience with our software.<br>
+						Our real, live customer support team will go out of their way to help you—by phone or by email.<br>
+						For free. We also have free video tutorials, forums, training webinars, whitepapers,<br>
+						and a great knowledgebase you can access 24/7.
+							<div class="left_arrow">
+								<img src="./img/arrow.png">
+							</div>
+							<div class="right_arrow">
+								<img src="./img/arrow_r.png">
+							</div>
+					</div>
+					<div class="text_bott">
+						Alice Anderson, <a href="https://99designs.com/" target="_blank">99designs.com</a>
+					</div>
+				</div>
+				<div class="lower_text">
+					<div>Protectly protects your sensitive files.</div>
+					<div>
+						We protect your sensitive files across all popular cloud services and devices, by encrypting them,<br>
+						controlling access to them and providing an audit trail for all changes to your files.
+					</div>
+				</div>
+			</div>
+			<div id="footer">
+			</div>
 		</div>
 	</body>
 </HTML>
