Доделал контент часть

--- a/HC/practice6/index.html
+++ b/HC/practice6/index.html
@@ -79,9 +79,24 @@
 						controlling access to them and providing an audit trail for all changes to your files.
 					</div>
 				</div>
+				<div class="functions">
+					<div>
+						<img src="./img/files.png"><br>
+						<span>Compliant file Sharing</span>
+						<div class="arrow_dotted"><img src="./img/arrow_red.png"></div>
+					</div>
+					<div>
+						<img src="./img/shield_1.png"><br>
+						<span>Endpoint Security</span>
+						<div class="arrow_dotted"><div><img src="./img/arrow_red.png"></div></div>
+					</div>
+					<div>
+						<img src="./img/mac.png"><br>
+						<span>Access Control</span>
+					</div>
+				</div>
 			</div>
-			<div id="footer">
-			</div>
+			<div id="footer"></div>
 		</div>
 	</body>
 </HTML>
