--- a/HC/practice6/index.html
+++ b/HC/practice6/index.html
@@ -26,7 +26,7 @@
 					</div>
 				</div>
 				<div class="container container_protect">
-					<div class="protect_text">
+					<div class="protect_text default">
 						Protect Your sensitive<br>
 						files across cloud services.
 					</div>
@@ -52,7 +52,7 @@
 					<img src="./img/sixth_logo.png">
 				</div>
 				<!--<div class="lorem">Lorem ipsum sit Amet Dolor</div>-->
-				<div class="middle_text">
+				<div class="middle_text default">
 					<div class="lorem">
 						Lorem ipsum sit Amet Dolor
 					</div>
@@ -72,14 +72,14 @@
 						Alice Anderson, <a href="https://99designs.com/" target="_blank">99designs.com</a>
 					</div>
 				</div>
-				<div class="lower_text">
+				<div class="lower_text default">
 					<div>Protectly protects your sensitive files.</div>
 					<div>
 						We protect your sensitive files across all popular cloud services and devices, by encrypting them,<br>
 						controlling access to them and providing an audit trail for all changes to your files.
 					</div>
 				</div>
-				<div class="functions">
+				<div class="functions default">
 					<div>
 						<img src="./img/files.png"><br>
 						<span>Compliant file Sharing</span>
@@ -96,7 +96,49 @@
 					</div>
 				</div>
 			</div>
-			<div id="footer"></div>
+			<div id="footer">
+				<div class="footer_content">
+					<div class="footer_shield">
+					<img src="./img/bottom_shield.png">
+					</div>
+					<div class="info_ul default">
+						<ul><span>Protectly</span>
+							<li><a href="#">Getting Started</a></li>
+							<li><a href="#">Enterprise Features</a></li>
+							<li><a href="#">Why Us?</a></li>
+							<li><a href="#">Solution</a></li>
+							<li><a href="#">Pricing</a></li>
+						</ul>
+						<ul><span>About Us</span>
+							<li><a href="#">Our Story</a></li>
+							<li><a href="#">Our Leadership</a></li>
+							<li><a href="#">Our Investors</a></li>
+							<li><a href="#">Jobs</a></li>
+						</ul>
+						<ul><span>Support</span>
+							<li><a href="#">Help</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+							<li><a href="#">Terms of Use</a></li>
+						</ul>
+					</div>
+					<div class="social">
+						<div><img src="./img/social.png"></div>
+					</div>
+					<div class="footer_contacts">
+						<div class="footer_number default">
+							<img src="./img/footer_phone.png">
+							<span>+1 (888) 675-4998</span>
+						</div>
+						<div class="footer_mail default">
+							<img src="./img/footer_mail.png">
+							<span>info@mail.com</span>
+						</div>
+					</div>
+					<div class="copyright default">
+						<span>All rights reserved. Posted by Dospel & GanjaParker 2013</span>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </HTML>
