Переход через 7 секунд

--- a/HC/practice13/1/1slide.html
+++ b/HC/practice13/1/1slide.html
@@ -3,6 +3,7 @@
 		<TITLE>Парадигма ООП</TITLE>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<meta http-equiv="refresh" content="7; ../2/2slide.html">
     </head>
 	<body>
 	<a href="../2/2slide.html"></a>
