--- a/HC/practice13/2/2slide.html
+++ b/HC/practice13/2/2slide.html
@@ -3,6 +3,7 @@
 		<TITLE>ООП</TITLE>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<meta http-equiv="refresh" content="7; ../3/3slide.html">
     </head>
 	<body>
 	<a href="../3/3slide.html"></a>
