--- a/HC/practice13/3/3slide.html
+++ b/HC/practice13/3/3slide.html
@@ -3,6 +3,7 @@
 		<TITLE>Столпы ООП</TITLE>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<meta http-equiv="refresh" content="7; ../4/4slide.html">
     </head>
 	<body>
 	<a href="../4/4slide.html"></a>
