--- a/HC/practice13/4/4slide.html
+++ b/HC/practice13/4/4slide.html
@@ -3,6 +3,7 @@
 		<TITLE>Абстрагирование</TITLE>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<meta http-equiv="refresh" content="7; ../5/5slide.html">
     </head>
 	<body>
 	<a href="../5/5slide.html"></a>
