--- a/HC/practice13/5/5slide.html
+++ b/HC/practice13/5/5slide.html
@@ -3,6 +3,7 @@
 		<TITLE>Наследование</TITLE>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<meta http-equiv="refresh" content="7; ../6/6slide.html">
     </head>
 	<body>
 	<a href="../6/6slide.html"></a>
