--- a/HC/practice13/9/9slide.html
+++ b/HC/practice13/9/9slide.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="animate.css">
+		<meta http-equiv="refresh" content="7; ../10/10slide.html">
     </head>
 	<body>
 	<a href="../10/10slide.html"></a>
